discussion/kv_engine/181596/181596_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

Don't submit disabled events to the audit daemon

Change-Id: I1eb473c4cc6cfa27597cd59b872e39dc06bcde9e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-20 20:26:07.000000000
Message: 
Uploaded patch set 10: Patch Set 9 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-20 20:47:29.000000000
Message: 
Patch Set 10: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23386/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23386/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24623/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24623/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31808/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31808/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22806/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22806/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11088/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11088/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21356/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:320:26: error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON" [clang-diagnostic-error]
    if (audit_eventid != NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON) {
                         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21356/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:320:26:
error: use of undeclared identifier "NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21356/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42432/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/auditd/src/eventdescriptor.h:72:10:
error: no type named "atomic_bool" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42432/ )

CMake error: CMakeLists.txt:156 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42432/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23788/ : FAILURE

Compile error at [2022-10-20T20:39:53.476Z] ../kv_engine/auditd/src/event.cc:105:24:
error: ?AuditDescriptorManager? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23788/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11184/ : FAILURE

Compile error at [2022-10-20T20:46:26.099Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/mcaudit.cc:320:26:
error: ?NS_SERVER_AUDIT_CONFIGURED_AUDIT_DAEMON? was not declared in this scope; did you mean ?AUDITD_AUDIT_CONFIGURED_AUDIT_DAEMON??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11184/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20614/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
